# adblock-rust-for-swift

./: .gitignore  Package.release.swift  Package.swift  README.md  rust-toolchain.toml
Examples/AdblockWebViewApp/: Package.swift  README.md
Examples/AdblockWebViewApp/Sources/AdblockWebViewApp/: main.swift
Examples/AdblockWebViewApp/scripts/: package_app.sh  run.sh
Native/adblock-rust-ffi/: Cargo.toml
Native/adblock-rust-ffi/src/: lib.rs
Scripts/: build-xcframework.sh  package-release.sh
Sources/AdblockRust/: AdblockEngine.swift
include/: AdblockRustFFI.h  module.modulemap
