[package]
name = "adblock-rust-ffi"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false
rust-version = "1.86"

[lib]
name = "adblock_rust_ffi"
crate-type = ["staticlib"]

[dependencies]
adblock = { git = "https://github.com/brave/adblock-rust", default-features = true, features = ["content-blocking", "css-validation", "full-regex-handling"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
